# chinese-poker

./: LICENSE  Main.hs  Makefile  README.md  chinese-poker.cabal
poker-server/: Server.hs
src/: Hand.hs  Main.hs  Util.hs
test/Hand/: HandSpec.hs
