name:                chinese-poker
version:             0.0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/benperez/chinese-poker
-- license:
-- license-file:
author:              Benjamin Perez
maintainer:          ben.prez@gmail.com
-- copyright:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:
      src
  exposed-modules:
      Hand
  build-depends:
      base
    , Unique >= 0.4.0
  default-language:
      Haskell2010

test-suite spec
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      base
    , chinese-poker
    , hspec >= 2.2
